[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "Serde support for S-Expressions."
license = "Apache-2.0/MIT"
edition = "2018"
name = "serde_sexpr"
version = "0.1.0"

[dependencies]
nom = "4.2.3"
serde = "1.0.90"

[dev-dependencies]
proptest = "0.9.3"
serde = { features = ["derive"], version = "1.0.90" }
